--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,11 @@
-
+name: Test Action
+on:
+  push:
+    branches:
+      - main
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 23f1002879@ds.study.iitm.ac.in
+        run: echo "Hello, world!"
